--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3657,7 +3657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3671,7 +3671,7 @@
    "source": [
     "%%file 0x02-shell_redirections/101-gifs\n",
     "#!/bin/bash\n",
-    "find -type f -name \"*.gif\" | cut -d \"/\" -f 2 | cut -d '.' -f 1 | LC_ALL=C sort -f  "
+    "find -type f -name \"*.gif\" | rev | cut -d \"/\" -f 1 | cut -d '.' -f 2- | rev | LC_ALL=C sort -f"
    ]
   },
   {
@@ -3721,17 +3721,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 00e953c] 101-gifs\n",
-      " 3 files changed, 216 insertions(+), 5 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/101-gifs\n",
-      " create mode 100644 test.gif\n"
+      "[main 54a9dee] 101-gifs\n",
+      " 2 files changed, 19 insertions(+), 10 deletions(-)\n"
      ]
     },
     {
@@ -3739,7 +3737,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   2a29647..00e953c  main -> main\n"
+      "   00e953c..54a9dee  main -> main\n"
      ]
     }
    ],
