--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3721,15 +3721,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 54a9dee] 101-gifs\n",
-      " 2 files changed, 19 insertions(+), 10 deletions(-)\n"
+      "[main b9a92d1] 101-gifs\n",
+      " 2 files changed, 7 insertions(+), 9 deletions(-)\n"
      ]
     },
     {
@@ -3737,7 +3737,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   00e953c..54a9dee  main -> main\n"
+      "   54a9dee..b9a92d1  main -> main\n"
      ]
     }
    ],
@@ -3754,6 +3754,215 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 25. Acrostic</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### An acrostic is a poem (or other form of writing) in which the first letter (or syllable, or word) of each line (or paragraph, or other recurring feature in the text) spells out a word, message or the alphabet. The word comes from the French acrostiche from post-classical Latin acrostichis). As a form of constrained writing, an acrostic can be used as a mnemonic device to aid memory retrieval. [Read more](https://en.wikipedia.org/wiki/Acrostic).\n",
+    "\n",
+    "Create a script that decodes acrostics that use the first letter of each line.\n",
+    "\n",
+    "* The ‘decoded’ message has to end with a new line\n",
+    "* You are not allowed to use `grep`, `egrep`, `fgrep` or `rgrep`\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "julien@ubuntu:/tmp/0x02$ cat An\\ Acrostic \n",
+    "Elizabeth it is in vain you say\n",
+    "Love not\"—thou sayest it in so sweet a way:\n",
+    "In vain those words from thee or L.E.L.\n",
+    "Zantippe's talents had enforced so well:\n",
+    "Ah! if that language from thy heart arise,\n",
+    "Breath it less gently forth—and veil thine eyes.\n",
+    "Endymion, recollect, when Luna tried\n",
+    "To cure his love—was cured of all beside—\n",
+    "His follie—pride—and passion—for he died.\n",
+    "julien@ubuntu:/tmp/0x02$ ./102-acrostic < An\\ Acrostic \n",
+    "ELIZABETH\n",
+    "julien@ubuntu:/tmp/0x02$ \n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `102-acrostic`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/102-acrostic\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/102-acrostic\n",
+    "#!/bin/bash\n",
+    "cut -c1 | tr -d '\\n'; echo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing An Acrostic\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file \"An Acrostic\"\n",
+    "Elizabeth it is in vain you say\n",
+    "Love not\"—thou sayest it in so sweet a way:\n",
+    "In vain those words from thee or L.E.L.\n",
+    "Zantippe's talents had enforced so well:\n",
+    "Ah! if that language from thy heart arise,\n",
+    "Breath it less gently forth—and veil thine eyes.\n",
+    "Endymion, recollect, when Luna tried\n",
+    "To cure his love—was cured of all beside—\n",
+    "His follie—pride—and passion—for he died."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cut -c1 | tr -d '\\n'; echo < An\\ Acrostic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elizabeth it is in vain you sayLove not\"—thou sayest it in so sweet a way:In vain those words from thee or L.E.L.Zantippe's talents had enforced so well:Ah! if that language from thy heart arise,Breath it less gently forth—and veil thine eyes.Endymion, recollect, when Luna triedTo cure his love—was cured of all beside—His follie—pride—and passion—for he died.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cut -c1 | paste -s -d '' < An\\ Acrostic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elizabeth it is in vain you say\n",
+      "Love not\"—thou sayest it in so sweet a way:\n",
+      "In vain those words from thee or L.E.L.\n",
+      "Zantippe's talents had enforced so well:\n",
+      "Ah! if that language from thy heart arise,\n",
+      "Breath it less gently forth—and veil thine eyes.\n",
+      "Endymion, recollect, when Luna tried\n",
+      "To cure his love—was cured of all beside—\n",
+      "His follie—pride—and passion—for he died.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat An\\ Acrostic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ELIZABETH\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!chmod u+x 0x02-shell_redirections/102-acrostic\n",
+    "!./0x02-shell_redirections/102-acrostic < An\\ Acrostic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main b9a92d1] 101-gifs\n",
+      " 2 files changed, 7 insertions(+), 9 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   54a9dee..b9a92d1  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"0x02-shell_redirections/102-acrostic\"\n",
+    "git push"
+   ]
   }
  ],
  "metadata": {
