0x02-shell_redirections/102-acrostic

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3807,21 +3807,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/102-acrostic\n"
+      "Overwriting 0x02-shell_redirections/102-acrostic\n"
      ]
     }
    ],
    "source": [
     "%%file 0x02-shell_redirections/102-acrostic\n",
     "#!/bin/bash\n",
-    "cut -c1 | tr -d '\\n'; echo"
+    "cut -c1 | paste -s -d ''"
    ]
   },
   {
@@ -3918,7 +3918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3937,15 +3937,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b9a92d1] 101-gifs\n",
-      " 2 files changed, 7 insertions(+), 9 deletions(-)\n"
+      "[main 5a933a3] 0x02-shell_redirections/102-acrostic\n",
+      " 4 files changed, 233 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/102-acrostic\n",
+      " create mode 100644 An Acrostic\n",
+      " create mode 100644 An_Acrostic\n"
      ]
     },
     {
@@ -3953,7 +3956,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   54a9dee..b9a92d1  main -> main\n"
+      "   b9a92d1..5a933a3  main -> main\n"
      ]
     }
    ],
@@ -3963,6 +3966,13 @@
     "git commit -m \"0x02-shell_redirections/102-acrostic\"\n",
     "git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
