--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -3937,18 +3937,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 5a933a3] 0x02-shell_redirections/102-acrostic\n",
-      " 4 files changed, 233 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/102-acrostic\n",
-      " create mode 100644 An Acrostic\n",
-      " create mode 100644 An_Acrostic\n"
+      "[main 86b560e] 0x02-shell_redirections/102-acrostic\n",
+      " 2 files changed, 19 insertions(+), 9 deletions(-)\n"
      ]
     },
     {
@@ -3956,7 +3953,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b9a92d1..5a933a3  main -> main\n"
+      "   5a933a3..86b560e  main -> main\n"
      ]
     }
    ],
@@ -3973,6 +3970,225 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 26. The biggest fan</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Write a script that parses web servers logs in TSV format as input and displays the 11 hosts or IP addresses which did the most requests.\n",
+    "\n",
+    "* Order by number of requests, most active host or IP at the top\n",
+    "* You are not allowed to use `grep`, `egrep`, `fgrep` or `rgrep`\n",
+    "\n",
+    "##### Format:\n",
+    "```bash\n",
+    "host    When possible, the hostname making the request. Uses the IP address if the hostname was unavailable.\n",
+    "logname Unused, always -\n",
+    "time    In seconds, since 1970\n",
+    "method  HTTP method: GET, HEAD, or POST\n",
+    "url Requested path\n",
+    "response    HTTP response code\n",
+    "bytes   Number of bytes in the reply \n",
+    "```\n",
+    "##### Here is an example with one day of logs of the NASA website (1995).\n",
+    "```bash\n",
+    "julien@ubuntu:/tmp/0x02$ wget https://s3.amazonaws.com/alx-intranet.hbtn.io/public/nasa_19950801.tsv\n",
+    "--2022-03-08 11:08:26--  https://s3.amazonaws.com/alx-intranet.hbtn.io/public/nasa_19950801.tsv\n",
+    "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.217.171.144\n",
+    "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.217.171.144|:443... connected.\n",
+    "HTTP request sent, awaiting response... 200 OK\n",
+    "Length: 782913 (765K) [binary/octet-stream]\n",
+    "Saving to: ‘nasa_19950801.tsv’\n",
+    "\n",
+    "nasa_19950801.tsv   100%[===================>] 764.56K  --.-KB/s    in 0.008s\n",
+    "\n",
+    "2022-03-08 11:08:26 (98.4 MB/s) - ‘nasa_19950801.tsv’ saved [782913/782913]\n",
+    "\n",
+    "julien@ubuntu:/tmp/0x02$ head nasa_19950801.tsv\n",
+    "host    logname time    method  url     response        bytes\n",
+    "in24.inetnebr.com       -       807249601       GET     /shuttle/missions/sts-68/news/sts-68-mcc-05.txt 200     1839\n",
+    "uplherc.upl.com -       807249607       GET     /       304     0\n",
+    "uplherc.upl.com -       807249608       GET     /images/ksclogo-medium.gif      304     0\n",
+    "uplherc.upl.com -       807249608       GET     /images/MOSAIC-logosmall.gif    304     0\n",
+    "uplherc.upl.com -       807249608       GET     /images/USA-logosmall.gif       304     0\n",
+    "ix-esc-ca2-07.ix.netcom.com     -       807249609       GET     /images/launch-logo.gif 200     1713\n",
+    "uplherc.upl.com -       807249610       GET     /images/WORLD-logosmall.gif     304     0\n",
+    "slppp6.intermind.net    -       807249610       GET     /history/skylab/skylab.html     200     1687\n",
+    "piweba4y.prodigy.com    -       807249610       GET     /images/launchmedium.gif        200     11853\n",
+    "julien@ubuntu:/tmp/0x02$ ./103-the_biggest_fan < nasa_19950801.tsv \n",
+    "www-relay.pa-x.dec.com\n",
+    "piweba3y.prodigy.com\n",
+    "www.thyssen.com\n",
+    "130.110.74.81\n",
+    "ix-min1-02.ix.netcom.com\n",
+    "uplherc.upl.com\n",
+    "reggae.iinet.net.au\n",
+    "seigate.sumiden.co.jp\n",
+    "ircgate1.rcc-irc.si\n",
+    "s150.phxslip4.indirect.com\n",
+    "torben.dou.dk\n",
+    "julien@ubuntu:/tmp/0x02$ \n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `103-the_biggest_fan`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x02-shell_redirections/103-the_biggest_fan\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x02-shell_redirections/103-the_biggest_fan\n",
+    "#!/bin/bash\n",
+    "tail -n +2 | cut -f -1 | sort -k 1 | uniq -c | sort -rnk 1 | head -n 11 | rev | cut -d ' ' -f -1 | rev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2024-04-05 16:26:01--  https://s3.amazonaws.com/alx-intranet.hbtn.io/public/nasa_19950801.tsv\n",
+      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 54.231.165.48, 52.217.98.118, 52.217.113.40, ...\n",
+      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|54.231.165.48|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 782913 (765K) [binary/octet-stream]\n",
+      "Saving to: ‘nasa_19950801.tsv’\n",
+      "\n",
+      "nasa_19950801.tsv   100%[===================>] 764.56K  5.84KB/s    in 2m 2s   \n",
+      "\n",
+      "2024-04-05 16:28:09 (6.25 KB/s) - ‘nasa_19950801.tsv’ saved [782913/782913]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://s3.amazonaws.com/alx-intranet.hbtn.io/public/nasa_19950801.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "host\tlogname\ttime\tmethod\turl\tresponse\tbytes\n",
+      "in24.inetnebr.com\t-\t807249601\tGET\t/shuttle/missions/sts-68/news/sts-68-mcc-05.txt\t200\t1839\t\t\n",
+      "uplherc.upl.com\t-\t807249607\tGET\t/\t304\t0\t\t\n",
+      "uplherc.upl.com\t-\t807249608\tGET\t/images/ksclogo-medium.gif\t304\t0\t\t\n",
+      "uplherc.upl.com\t-\t807249608\tGET\t/images/MOSAIC-logosmall.gif\t304\t0\t\t\n",
+      "uplherc.upl.com\t-\t807249608\tGET\t/images/USA-logosmall.gif\t304\t0\t\t\n",
+      "ix-esc-ca2-07.ix.netcom.com\t-\t807249609\tGET\t/images/launch-logo.gif\t200\t1713\t\t\n",
+      "uplherc.upl.com\t-\t807249610\tGET\t/images/WORLD-logosmall.gif\t304\t0\t\t\n",
+      "slppp6.intermind.net\t-\t807249610\tGET\t/history/skylab/skylab.html\t200\t1687\t\t\n",
+      "piweba4y.prodigy.com\t-\t807249610\tGET\t/images/launchmedium.gif\t200\t11853\t\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head nasa_19950801.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www-relay.pa-x.dec.com\n",
+      "piweba3y.prodigy.com\n",
+      "www.thyssen.com\n",
+      "130.110.74.81\n",
+      "ix-min1-02.ix.netcom.com\n",
+      "uplherc.upl.com\n",
+      "reggae.iinet.net.au\n",
+      "seigate.sumiden.co.jp\n",
+      "ircgate1.rcc-irc.si\n",
+      "s150.phxslip4.indirect.com\n",
+      "torben.dou.dk\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./0x02-shell_redirections/103-the_biggest_fan < nasa_19950801.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "!chmod u+x 0x02-shell_redirections/103-the_biggest_fan\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 86b560e] 0x02-shell_redirections/102-acrostic\n",
+      " 2 files changed, 19 insertions(+), 9 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   5a933a3..86b560e  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"103\"\n",
+    "git push"
+   ]
   }
  ],
  "metadata": {
