commiting README.md

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -30,12 +30,13 @@
     "\n",
     "## alx-system_engineering-devops/0x00-Shell_basics\n",
     "## alx-system_engineering-devops/0x01-Shell_permissions\n",
-    "## alx-system_engineering-devops/0x02-Shell, I/O Redirections and filters"
+    "## alx-system_engineering-devops/0x02-Shell, I/O Redirections and filters\n",
+    "## alx-system_engineering-devops/0x03-Shell, init files, variables and expansions\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +45,7 @@
        "'/home/elkomy/alx-system_engineering-devops'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,22 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "# creating 0x02-shell_redirectionss\n",
     "\n",
-    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x02-shell_redirections'\n",
+    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x03-Shell_variables_expansions'\n",
     "if not os.path.exists(folder_path):\n",
     "    os.makedirs(folder_path)\n",
     "\n",
-    "# Create a README.md inside 0x02-shell_redirections\n",
+    "# Create a README.md inside 0x03-Shell_variables_expansions\n",
     "file_path = os.path.join(folder_path, 'README.md')\n",
     "\n",
     "with open(file_path, 'w') as file:\n",
-    "    file.write(\"This is a README.md file inside alx-system_engineering-devops/0x02-shell_redirections\")\n",
+    "    file.write(\"This is a README.md file inside alx-system_engineering-devops/0x03-Shell_variables_expansions\")\n",
     "\n"
    ]
   },
@@ -83,12 +84,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/README.md\n"
+      "Overwriting 0x03-Shell_variables_expansions/README.md\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/README.md\n",
+    "%%file 0x03-Shell_variables_expansions/README.md\n",
     "This is a README.md"
    ]
   },
