--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -95,19 +95,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is up to date with 'origin/main'.\n",
-      "\n",
-      "nothing to commit, working tree clean\n",
-      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
-      "Everything up-to-date\n"
+      "[main f6bb29c] commiting README.md\n",
+      " 4 files changed, 4243 insertions(+), 6 deletions(-)\n",
+      " create mode 100644 0x03-Shell_variables_expansions/README.md\n",
+      " create mode 100644 0x03-shell_variables_expansions.ipynb\n",
+      "Enumerating objects: 9, done.\n",
+      "Counting objects: 100% (9/9), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (6/6), 889 bytes | 889.00 KiB/s, done.\n",
+      "Total 6 (delta 3), reused 1 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 2 local objects.\u001b[K\n",
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   d1b5740..f6bb29c  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
@@ -120,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +152,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h1>  0x02. 0x02. Shell, I/O Redirections and filters  </h1>\n",
+    "<h1> 0x03. Shell, init files, variables and expansions  </h1>\n",
     "</center>\n",
     "\n",
     "---\n"
@@ -157,7 +165,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4>  0. Hello World </h4>\n",
+    "<h4>  0. &lt;o&gt; </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -168,40 +176,43 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### Write a script that prints \"Hello, World\", followed by a new line to the standard output. \n",
+    "#### WCreate a script that creates an alias.\n",
+    "* Name: `ls`\n",
+    "* Value: `rm *` \n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ./0-hello_world \n",
-    "Hello, World\n",
-    "julien@ubuntu:/tmp/h$ ./0-hello_world | cat -e # cat is used to display the contents of a file, but the -e option makes it print a $ character at the end of each line.\n",
-    "Hello, World$\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "julien@ubuntu:/tmp/0x03$ ls\n",
+    "0-alias  file1  file2\n",
+    "julien@ubuntu:/tmp/0x03$ source ./0-alias \n",
+    "julien@ubuntu:/tmp/0x03$ ls\n",
+    "julien@ubuntu:/tmp/0x03$ \\ls\n",
+    "julien@ubuntu:/tmp/0x03$  \n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository: ``` alx-system_engineering-devops ```\n",
-    "* Directory: ```0x02-shell_redirections``` \n",
-    "* File: ``` 0-hello_world```"
+    "* Directory: ```0x03-shell_variables_expansions``` \n",
+    "* File: ``` 0-alias```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/0-hello_world\n"
+      "Writing 0x03-shell_variables_expansions/0-alias\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/0-hello_world\n",
+    "%%file 0x03-shell_variables_expansions/0-alias\n",
     "#!/bin/bash\n",
-    "echo \"Hello, World\"\n"
+    "alias ls='rm *'\n"
    ]
   },
   {
@@ -210,12 +221,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x 0x02-shell_redirections/0-hello_world"
+    "!chmod u+x 0x03-shell_variables_expansions/0-alias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -223,31 +234,23 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash$\n",
-      "echo \"Hello, World\"$\n"
+      "alias ls='rm *'$\n"
      ]
     }
    ],
    "source": [
-    "!cat -e 0x02-shell_redirections/0-hello_world"
+    "!cat -e 0x03-shell_variables_expansions/0-alias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World$\n",
-      "$\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%bash\n",
-    "./0x02-shell_redirections/0-hello_world | cat -e"
+    "# Dont you dare operate it \n",
+    "#%%bash\n",
+    "#./0x02-shell_redirections/0-hello_world | cat -e"
    ]
   },
   {
@@ -277,7 +280,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"0-hello_world\"\n",
+    "!git commit -m \"0-alias\"\n",
     "!git push -u origin main"
    ]
   },
