0x03-shell_variables_expansions/1-hello_you

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -255,24 +255,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 2d9333c] 0-hello_world\n",
-      " 2 files changed, 17 insertions(+), 17 deletions(-)\n",
-      "Enumerating objects: 9, done.\n",
-      "Counting objects: 100% (9/9), done.\n",
+      "[main e1f6ade] 0-alias\n",
+      " 3 files changed, 45 insertions(+), 40 deletions(-)\n",
+      " create mode 100644 0x03-shell_variables_expansions/0-alias\n",
+      " rename {0x03-Shell_variables_expansions => 0x03-shell_variables_expansions}/README.md (100%)\n",
+      "Enumerating objects: 7, done.\n",
+      "Counting objects: 100% (7/7), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 656 bytes | 328.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 962 bytes | 962.00 KiB/s, done.\n",
       "Total 5 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   a94466b..2d9333c  main -> main\n",
+      "   f6bb29c..e1f6ade  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -291,7 +293,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 1. Confused smiley </h4>\n",
+    "<h4> 1. Hello you </h4>\n",
     "</center>\n",
     "\n",
     "---\n"
@@ -301,52 +303,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Write a script that displays a confused smiley `\"(Ôo)'`.\n",
-    "    ```bash\n",
-    "        julien@ubuntu:/tmp/h$ ./1-confused_smiley \n",
-    "        \"(Ôo)'\n",
-    "        julien@ubuntu:/tmp/h$ \n",
-    "    ```\n",
+    "##### Create a script that prints `hello user`, where user is the current Linux user.\n",
+    "```bash\n",
+    "    julien@ubuntu:/tmp/0x03$ id\n",
+    "    uid=1000(julien) gid=1000(julien) groups=1000(julien),4(adm),24(cdrom),27(sudo),30(dip),46(plugdev),113(lpadmin),128(sambashare)\n",
+    "    julien@ubuntu:/tmp/0x03$ ./1-hello_you \n",
+    "    hello julien\n",
+    "    julien@ubuntu:/tmp/0x03$  \n",
+    "```\n",
     "\n",
     "* Repo:\n",
     "\n",
     "    * GitHub repository: <code > alx-system_engineering-devops </code>\n",
-    "    * Directory: <code > 0x02-shell_redirections </code>\n",
-    "    * File: <code >  File: 1-confused_smiley </code>\n",
+    "    * Directory: <code > 0x03-shell_variables_expansions </code>\n",
+    "    * File: <code >  File: 1-hello_you </code>\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/1-confused_smiley\n"
+      "Writing 0x03-shell_variables_expansions/1-hello_you\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/1-confused_smiley\n",
+    "%%file 0x03-shell_variables_expansions/1-hello_you\n",
     "#!/bin/bash\n",
-    "echo \"\\\"(Ôo)'\""
+    "echo hello $USER"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x 0x02-shell_redirections/1-confused_smiley"
+    "!chmod u+x 0x03-shell_variables_expansions/1-hello_you"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -354,29 +358,29 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "echo \"\\\"(Ôo)\\'\"\n"
+      "echo hello $USER\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x02-shell_redirections/1-confused_smiley"
+    "!cat 0x03-shell_variables_expansions/1-hello_you"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"(Ôo)'\n"
+      "hello elkomy\n"
      ]
     }
    ],
    "source": [
-    "!0x02-shell_redirections/1-confused_smiley"
+    "!./0x03-shell_variables_expansions/1-hello_you"
    ]
   },
   {
