0x02-shell_redirections/2-hellofile

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -385,31 +385,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main a357abd] confused_smiley\n",
-      " 2 files changed, 29 insertions(+), 29 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/1-confused_smiley\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[main bf07d98] 0x03-shell_variables_expansions/1-hello_you\n",
+      " 2 files changed, 34 insertions(+), 28 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/1-hello_you\n",
       "Enumerating objects: 8, done.\n",
       "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 835 bytes | 835.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 1.02 KiB | 1.02 MiB/s, done.\n",
       "Total 5 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   2d9333c..a357abd  main -> main\n",
+      "   e1f6ade..bf07d98  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -417,7 +411,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"confused_smiley\"\n",
+    "!git commit -m \"0x03-shell_variables_expansions/1-hello_you\"\n",
     "!git push -u origin main"
    ]
   },
@@ -428,7 +422,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 2. Let's display a file </h4>\n",
+    "<h4> 2. The path to success is to take massive, determined action </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -438,71 +432,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Display the content of the `/etc/passwd` file.\n",
-    "\n",
-    "#### Example\n",
+    "#### Add `/action` to the `PATH`. `/action` should be the last directory the shell looks into when looking for a program.\n",
     "\n",
     "```bash\n",
-    "$ ./2-hellofile\n",
-    "##\n",
-    "# User Database\n",
-    "#\n",
-    "# Note that this file is consulted directly only when the system is running\n",
-    "# in single-user mode. At other times this information is provided by\n",
-    "# Open Directory.\n",
-    "#\n",
-    "# See the opendirectoryd(8) man page for additional information about\n",
-    "# Open Directory.\n",
-    "##\n",
-    "nobody:*:-2:-2:Unprivileged User:/var/empty:/usr/bin/false\n",
-    "root:*:0:0:System Administrator:/var/root:/bin/sh\n",
-    "daemon:*:1:1:System Services:/var/root:/usr/bin/false\n",
-    "_uucp:*:4:4:Unix to Unix Copy Protocol:/var/spool/uucp:/usr/sbin/uucico\n",
-    "_taskgated:*:13:13:Task Gate Daemon:/var/empty:/usr/bin/false\n",
-    "_networkd:*:24:24:Network Services:/var/networkd:/usr/bin/false\n",
-    "_installassistant:*:25:25:Install Assistant:/var/empty:/usr/bin/false\n",
-    "_lp:*:26:26:Printing Services:/var/spool/cups:/usr/bin/false\n",
-    "_postfix:*:27:27:Postfix Mail Server:/var/spool/postfix:/usr/bin/false\n",
-    "_scsd:*:31:31:Service Configuration Service:/var/empty:/usr/bin/false\n",
-    "_ces:*:32:32:Certificate Enrollment Service:/var/empty:/usr/bin/false\n",
-    "_mcxalr:*:54:54:MCX AppLaunch:/var/empty:/usr/bin/false\n",
-    "_krbfast:*:246:-2:Kerberos FAST Account:/var/empty:/usr/bin/false\n",
-    "$\n",
+    "julien@ubuntu:/tmp/0x03$ echo $PATH\n",
+    "/home/julien/bin:/home/julien/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin\n",
+    "julien@ubuntu:/tmp/0x03$ source ./2-path \n",
+    "julien@ubuntu:/tmp/0x03$ echo $PATH\n",
+    "/home/julien/bin:/home/julien/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/action\n",
+    "julien@ubuntu:/tmp/0x03$ \n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository:   <code>alx-system_engineering-devops </code>\n",
-    "* Directory:   <code> 0x02-shell_redirections </code>\n",
-    "* File:   <code> 2-hellofile</code>"
+    "* Directory:   <code> 0x03-shell_variables_expansions </code>\n",
+    "* File:   <code> 2-path</code>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/2-hellofile\n"
+      "Writing 0x03-shell_variables_expansions/2-path\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/2-hellofile\n",
+    "%%file 0x03-shell_variables_expansions/2-path\n",
     "#!/bin/bash\n",
-    "cat /etc/passwd"
+    "export PATH=\"$PATH:/action\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x 0x02-shell_redirections/2-hellofile"
+    "!chmod u+x 0x03-shell_variables_expansions/2-path"
    ]
   },
   {
@@ -552,7 +525,7 @@
     }
    ],
    "source": [
-    "!source ./0x02-shell_redirections/2-hellofile"
+    "!source ./0x03-shell_variables_expansions/2-path"
    ]
   },
   {
