--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -480,99 +480,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root:x:0:0:root:/root:/bin/bash\n",
-      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
-      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
-      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
-      "sync:x:4:65534:sync:/bin:/bin/sync\n",
-      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
-      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
-      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
-      "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
-      "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n",
-      "uucp:x:10:10:uucp:/var/spool/uucp:/usr/sbin/nologin\n",
-      "proxy:x:13:13:proxy:/bin:/usr/sbin/nologin\n",
-      "www-data:x:33:33:www-data:/var/www:/usr/sbin/nologin\n",
-      "backup:x:34:34:backup:/var/backups:/usr/sbin/nologin\n",
-      "list:x:38:38:Mailing List Manager:/var/list:/usr/sbin/nologin\n",
-      "irc:x:39:39:ircd:/var/run/ircd:/usr/sbin/nologin\n",
-      "gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/usr/sbin/nologin\n",
-      "nobody:x:65534:65534:nobody:/nonexistent:/usr/sbin/nologin\n",
-      "systemd-network:x:100:102:systemd Network Management,,,:/run/systemd:/usr/sbin/nologin\n",
-      "systemd-resolve:x:101:103:systemd Resolver,,,:/run/systemd:/usr/sbin/nologin\n",
-      "systemd-timesync:x:102:104:systemd Time Synchronization,,,:/run/systemd:/usr/sbin/nologin\n",
-      "messagebus:x:103:106::/nonexistent:/usr/sbin/nologin\n",
-      "syslog:x:104:110::/home/syslog:/usr/sbin/nologin\n",
-      "_apt:x:105:65534::/nonexistent:/usr/sbin/nologin\n",
-      "tss:x:106:111:TPM software stack,,,:/var/lib/tpm:/bin/false\n",
-      "uuidd:x:107:112::/run/uuidd:/usr/sbin/nologin\n",
-      "tcpdump:x:108:113::/nonexistent:/usr/sbin/nologin\n",
-      "sshd:x:109:65534::/run/sshd:/usr/sbin/nologin\n",
-      "landscape:x:110:115::/var/lib/landscape:/usr/sbin/nologin\n",
-      "pollinate:x:111:1::/var/cache/pollinate:/bin/false\n",
-      "fwupd-refresh:x:112:116:fwupd-refresh user,,,:/run/systemd:/usr/sbin/nologin\n",
-      "systemd-coredump:x:999:999:systemd Core Dumper:/:/usr/sbin/nologin\n",
-      "lxd:x:998:100::/var/snap/lxd/common/lxd:/bin/false\n",
-      "elkomy:x:1000:1000:,,,:/home/elkomy:/bin/bash\n"
-     ]
-    }
-   ],
-   "source": [
-    "!source ./0x03-shell_variables_expansions/2-path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#!/bin/bash\n",
-      "cat /etc/passwd\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cat 0x02-shell_redirections/2-hellofile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main c71a3b6] 0x02-shell_redirections/2-hellofile\n",
-      " 2 files changed, 94 insertions(+), 28 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/2-hellofile\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[main 67ac465] 0x02-shell_redirections/2-hellofile\n",
+      " 2 files changed, 26 insertions(+), 51 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/2-path\n",
       "Enumerating objects: 8, done.\n",
       "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 2.10 KiB | 715.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 1.00 KiB | 1.00 MiB/s, done.\n",
       "Total 5 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   a357abd..c71a3b6  main -> main\n",
+      "   bf07d98..67ac465  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -590,7 +516,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 3. What about 2?</h4>\n",
+    "<h4> 3. If the path be beautiful, let us not ask where it leads</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -600,41 +526,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Display the content of `/etc/passwd` and `/etc/hosts`.\n",
-    "\n",
-    "#### Example:\n",
+    "#### Create a script that counts the number of directories in the `PATH`.\n",
     "```bash\n",
-    "$ ./3-twofiles\n",
-    "##\n",
-    "# User Database\n",
-    "#\n",
-    "# Note that this file is consulted directly only when the system is running\n",
-    "# in single-user mode. At other times this information is provided by\n",
-    "# Open Directory.\n",
-    "#\n",
-    "# See the opendirectoryd(8) man page for additional information about\n",
-    "# Open Directory.\n",
-    "##\n",
-    "nobody:*:-2:-2:Unprivileged User:/var/empty:/usr/bin/false\n",
-    "root:*:0:0:System Administrator:/var/root:/bin/sh\n",
-    "daemon:*:1:1:System Services:/var/root:/usr/bin/false\n",
-    "##\n",
-    "# Host Database\n",
-    "#\n",
-    "# localhost is used to configure the loopback interface\n",
-    "# when the system is booting. Do not change this entry.\n",
-    "##\n",
-    "127.0.0.1   localhost\n",
-    "255.255.255.255 broadcasthost\n",
-    "::1 localhost\n",
-    "$\n",
+    "julien@ubuntu:/tmp/0x03$ echo $PATH\n",
+    "/home/julien/bin:/home/julien/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin\n",
+    "julien@ubuntu:/tmp/0x03$ . ./3-paths \n",
+    "11\n",
+    "julien@ubuntu:/tmp/0x03$ PATH=/home/julien/bin:/home/julien/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:::::/hello\n",
+    "julien@ubuntu:/tmp/0x03$ . ./3-paths \n",
+    "12\n",
+    "julien@ubuntu:/tmp/0x03$ \n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `3-twofiles`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `3-paths`"
    ]
   },
   {
@@ -646,14 +554,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/3-twofiles\n"
+      "Overwriting 0x03-shell_variables_expansions/3-paths\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/3-twofiles\n",
+    "%%file 0x03-shell_variables_expansions/3-paths\n",
     "#!/bin/bash\n",
-    "cat /etc/passwd /etc/hosts"
+    "echo $PATH | tr \":\" \"\\n\" | wc -l"
    ]
   },
   {
@@ -663,7 +571,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/3-twofiles"
+    "chmod u+x 0x03-shell_variables_expansions/3-paths"
    ]
   },
   {
@@ -676,12 +584,12 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "cat /etc/passwd /etc/hosts\n"
+      "echo $PATH | tr \":\" \"\\n\" | wc -l\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x02-shell_redirections/3-twofiles"
+    "!cat 0x03-shell_variables_expansions/3-paths"
    ]
   },
   {
@@ -693,61 +601,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root:x:0:0:root:/root:/bin/bash\n",
-      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
-      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
-      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
-      "sync:x:4:65534:sync:/bin:/bin/sync\n",
-      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
-      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
-      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
-      "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
-      "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n",
-      "uucp:x:10:10:uucp:/var/spool/uucp:/usr/sbin/nologin\n",
-      "proxy:x:13:13:proxy:/bin:/usr/sbin/nologin\n",
-      "www-data:x:33:33:www-data:/var/www:/usr/sbin/nologin\n",
-      "backup:x:34:34:backup:/var/backups:/usr/sbin/nologin\n",
-      "list:x:38:38:Mailing List Manager:/var/list:/usr/sbin/nologin\n",
-      "irc:x:39:39:ircd:/var/run/ircd:/usr/sbin/nologin\n",
-      "gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/usr/sbin/nologin\n",
-      "nobody:x:65534:65534:nobody:/nonexistent:/usr/sbin/nologin\n",
-      "systemd-network:x:100:102:systemd Network Management,,,:/run/systemd:/usr/sbin/nologin\n",
-      "systemd-resolve:x:101:103:systemd Resolver,,,:/run/systemd:/usr/sbin/nologin\n",
-      "systemd-timesync:x:102:104:systemd Time Synchronization,,,:/run/systemd:/usr/sbin/nologin\n",
-      "messagebus:x:103:106::/nonexistent:/usr/sbin/nologin\n",
-      "syslog:x:104:110::/home/syslog:/usr/sbin/nologin\n",
-      "_apt:x:105:65534::/nonexistent:/usr/sbin/nologin\n",
-      "tss:x:106:111:TPM software stack,,,:/var/lib/tpm:/bin/false\n",
-      "uuidd:x:107:112::/run/uuidd:/usr/sbin/nologin\n",
-      "tcpdump:x:108:113::/nonexistent:/usr/sbin/nologin\n",
-      "sshd:x:109:65534::/run/sshd:/usr/sbin/nologin\n",
-      "landscape:x:110:115::/var/lib/landscape:/usr/sbin/nologin\n",
-      "pollinate:x:111:1::/var/cache/pollinate:/bin/false\n",
-      "fwupd-refresh:x:112:116:fwupd-refresh user,,,:/run/systemd:/usr/sbin/nologin\n",
-      "systemd-coredump:x:999:999:systemd Core Dumper:/:/usr/sbin/nologin\n",
-      "lxd:x:998:100::/var/snap/lxd/common/lxd:/bin/false\n",
-      "elkomy:x:1000:1000:,,,:/home/elkomy:/bin/bash\n",
-      "# This file was automatically generated by WSL. To stop automatic generation of this file, add the following entry to /etc/wsl.conf:\n",
-      "# [network]\n",
-      "# generateHosts = false\n",
-      "127.0.0.1\tlocalhost\n",
-      "127.0.1.1\telkomy.\telkomy\n",
-      "﻿\n",
-      "192.168.1.9\thost.docker.internal\n",
-      "192.168.1.9\tgateway.docker.internal\n",
-      "127.0.0.1\tkubernetes.docker.internal\n",
-      "\n",
-      "# The following lines are desirable for IPv6 capable hosts\n",
-      "::1     ip6-localhost ip6-loopback\n",
-      "fe00::0 ip6-localnet\n",
-      "ff00::0 ip6-mcastprefix\n",
-      "ff02::1 ip6-allnodes\n",
-      "ff02::2 ip6-allrouters\n"
+      "77\n"
      ]
     }
    ],
    "source": [
-    "!./0x02-shell_redirections/3-twofiles"
+    "!./0x03-shell_variables_expansions/3-paths"
    ]
   },
   {
