--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -618,23 +618,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main a70f871] 0x02-shell_redirections/3-twofiles\n",
-      " 2 files changed, 20 insertions(+), 14 deletions(-)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enumerating objects: 9, done.\n",
-      "Counting objects: 100% (9/9), done.\n",
+      "[main f100cd9] 0x02-shell_redirections/3-twofiles\n",
+      " 2 files changed, 28 insertions(+), 167 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/3-paths\n",
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 632 bytes | 632.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 842 bytes | 842.00 KiB/s, done.\n",
       "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   ce26c06..a70f871  main -> main\n",
+      "   67ac465..f100cd9  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -654,7 +649,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 4. Last lines of a file</h4>\n",
+    "<h4> 4. Global variables</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -664,26 +659,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Display the last 10 lines of `/etc/passwd`.\n",
-    "#### Example:\n",
+    "#### Create a script that lists environment variables.\n",
     "```bash\n",
-    "$ ./4-lastlines\n",
-    "_assetcache:*:235:235:Asset Cache Service:/var/empty:/usr/bin/false\n",
-    "_coremediaiod:*:236:236:Core Media IO Daemon:/var/empty:/usr/bin/false\n",
-    "_launchservicesd:*:239:239:_launchservicesd:/var/empty:/usr/bin/false\n",
-    "_iconservices:*:240:240:IconServices:/var/empty:/usr/bin/false\n",
-    "_distnote:*:241:241:DistNote:/var/empty:/usr/bin/false\n",
-    "_nsurlsessiond:*:242:242:NSURLSession Daemon:/var/db/nsurlsessiond:/usr/bin/false\n",
-    "_nsurlstoraged:*:243:243:NSURLStorage Daemon:/var/empty:/usr/bin/false\n",
-    "_displaypolicyd:*:244:244:Display Policy Daemon:/var/empty:/usr/bin/false\n",
-    "_astris:*:245:245:Astris Services:/var/db/astris:/usr/bin/false\n",
-    "_krbfast:*:246:-2:Kerberos FAST Account:/var/empty:/usr/bin/false\n",
+    "julien@ubuntu:/tmp/0x03$ source ./4-global_variables\n",
+    "CC=gcc\n",
+    "CDPATH=.:~:/usr/local:/usr:/\n",
+    "CFLAGS=-O2 -fomit-frame-pointer\n",
+    "COLORTERM=gnome-terminal\n",
+    "CXXFLAGS=-O2 -fomit-frame-pointer\n",
+    "DISPLAY=:0\n",
+    "DOMAIN=hq.garrels.be\n",
+    "e=\n",
+    "TOR=vi\n",
+    "FCEDIT=vi\n",
+    "FIGNORE=.o:~\n",
+    "G_BROKEN_FILENAMES=1\n",
+    "GDK_USE_XFT=1\n",
+    "GDMSESSION=Default\n",
+    "GNOME_DESKTOP_SESSION_ID=Default\n",
+    "GTK_RC_FILES=/etc/gtk/gtkrc:/nethome/franky/.gtkrc-1.2-gnome2\n",
+    "GWMCOLOR=darkgreen\n",
+    "GWMTERM=xterm\n",
+    "HISTFILESIZE=5000\n",
+    "history_control=ignoredups\n",
+    "HISTSIZE=2000\n",
+    "HOME=/nethome/franky\n",
+    "HOSTNAME=octarine.hq.garrels.be\n",
+    "INPUTRC=/etc/inputrc\n",
+    "IRCNAME=franky\n",
+    "JAVA_HOME=/usr/java/j2sdk1.4.0\n",
+    "LANG=en_US\n",
+    "LDFLAGS=-s\n",
+    "LD_LIBRARY_PATH=/usr/lib/mozilla:/usr/lib/mozilla/plugins\n",
+    "LESSCHARSET=latin1\n",
+    "LESS=-edfMQ\n",
+    "LESSOPEN=|/usr/bin/lesspipe.sh %s\n",
+    "LEX=flex\n",
+    "LOCAL_MACHINE=octarine\n",
+    "LOGNAME=franky\n",
+    "[...]\n",
+    "julien@ubuntu:/tmp/0x03$ \n",
     "```\n",
-    "Tips: “Thinks of it as a cat, what is at the end of it?”\n",
+    "\n",
     "#### Repo:\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `4-lastlines`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `4-global_variables`"
    ]
   },
   {
@@ -700,62 +721,60 @@
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/4-lastlines\n",
+    "%%file 0x03-shell_variables_expansions/4-global_variables\n",
     "#!/bin/bash\n",
-    "tail -n 10 /etc/passwd"
+    "env"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!chmod u+x 0x02-shell_redirections/4-lastlines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#!/bin/bash\n",
-      "tail -n 10 /etc/passwd\n"
+      "chmod: cannot access '0x03-shell_variables_expansions/4-global_variables': No such file or directory\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x02-shell_redirections/4-lastlines"
+    "!chmod u+x 0x03-shell_variables_expansions/4-global_variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tss:x:106:111:TPM software stack,,,:/var/lib/tpm:/bin/false\n",
-      "uuidd:x:107:112::/run/uuidd:/usr/sbin/nologin\n",
-      "tcpdump:x:108:113::/nonexistent:/usr/sbin/nologin\n",
-      "sshd:x:109:65534::/run/sshd:/usr/sbin/nologin\n",
-      "landscape:x:110:115::/var/lib/landscape:/usr/sbin/nologin\n",
-      "pollinate:x:111:1::/var/cache/pollinate:/bin/false\n",
-      "fwupd-refresh:x:112:116:fwupd-refresh user,,,:/run/systemd:/usr/sbin/nologin\n",
-      "systemd-coredump:x:999:999:systemd Core Dumper:/:/usr/sbin/nologin\n",
-      "lxd:x:998:100::/var/snap/lxd/common/lxd:/bin/false\n",
-      "elkomy:x:1000:1000:,,,:/home/elkomy:/bin/bash\n"
+      "cat: 0x03-shell_variables_expansions/4-global_variables: No such file or directory\n"
      ]
     }
    ],
    "source": [
-    "!./0x02-shell_redirections/4-lastlines"
+    "!cat 0x03-shell_variables_expansions/4-global_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: ./0x03-shell_variables_expansions/4-global_variables: No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "!source ./0x03-shell_variables_expansions/4-global_variables"
    ]
   },
   {
