0x02-shell_redirections/4-lastlines

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -709,14 +709,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/4-lastlines\n"
+      "Writing 0x03-shell_variables_expansions/4-global_variables\n"
      ]
     }
    ],
@@ -728,53 +728,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chmod: cannot access '0x03-shell_variables_expansions/4-global_variables': No such file or directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!chmod u+x 0x03-shell_variables_expansions/4-global_variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cat: 0x03-shell_variables_expansions/4-global_variables: No such file or directory\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cat 0x03-shell_variables_expansions/4-global_variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: ./0x03-shell_variables_expansions/4-global_variables: No such file or directory\n"
-     ]
-    }
-   ],
-   "source": [
-    "!source ./0x03-shell_variables_expansions/4-global_variables"
    ]
   },
   {
@@ -786,24 +744,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 313c5ce] 0x02-shell_redirections/4-lastlines\n",
-      " 2 files changed, 57 insertions(+), 26 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/4-lastlines\n",
-      "Enumerating objects: 8, done.\n",
-      "Counting objects: 100% (8/8), done.\n",
-      "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 1.02 KiB | 1.02 MiB/s, done.\n",
-      "Total 5 (delta 3), reused 0 (delta 0)\n"
+      "#!/bin/bash\n",
+      "env\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "!cat 0x03-shell_variables_expansions/4-global_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "SHELL=/bin/bash\n",
+      "PYTHONUNBUFFERED=1\n",
+      "WSL2_GUI_APPS_ENABLED=1\n",
+      "CONDA_EXE=/home/elkomy/anaconda3/bin/conda\n",
+      "_CE_M=\n",
+      "WSL_DISTRO_NAME=Ubuntu-20.04\n",
+      "ELECTRON_RUN_AS_NODE=1\n",
+      "VSCODE_AMD_ENTRYPOINT=vs/workbench/api/node/extensionHostProcess\n",
+      "NAME=elkomy\n",
+      "PWD=/home/elkomy/alx-system_engineering-devops\n",
+      "LOGNAME=elkomy\n",
+      "CONDA_PREFIX=/home/elkomy/anaconda3\n",
+      "PYDEVD_IPYTHON_COMPATIBLE_DEBUGGING=1\n",
+      "_=/usr/bin/env\n",
+      "MOTD_SHOWN=update-motd\n",
+      "HOME=/home/elkomy\n",
+      "LANG=C.UTF-8\n",
+      "WSL_INTEROP=/run/WSL/544_interop\n",
+      "LS_COLORS=rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:mi=00:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arc=01;31:*.arj=01;31:*.taz=01;31:*.lha=01;31:*.lz4=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.tzo=01;31:*.t7z=01;31:*.zip=01;31:*.z=01;31:*.dz=01;31:*.gz=01;31:*.lrz=01;31:*.lz=01;31:*.lzo=01;31:*.xz=01;31:*.zst=01;31:*.tzst=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.alz=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.cab=01;31:*.wim=01;31:*.swm=01;31:*.dwm=01;31:*.esd=01;31:*.jpg=01;35:*.jpeg=01;35:*.mjpg=01;35:*.mjpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=00;36:*.au=00;36:*.flac=00;36:*.m4a=00;36:*.mid=00;36:*.midi=00;36:*.mka=00;36:*.mp3=00;36:*.mpc=00;36:*.ogg=00;36:*.ra=00;36:*.wav=00;36:*.oga=00;36:*.opus=00;36:*.spx=00;36:*.xspf=00;36:\n",
+      "WAYLAND_DISPLAY=wayland-0\n",
+      "FORCE_COLOR=1\n",
+      "CONDA_PROMPT_MODIFIER=(base) \n",
+      "PYDEVD_USE_FRAME_EVAL=NO\n",
+      "CLICOLOR=1\n",
+      "CLICOLOR_FORCE=1\n",
+      "LESSCLOSE=/usr/bin/lesspipe %s %s\n",
+      "VSCODE_HANDLES_SIGPIPE=true\n",
+      "TERM=xterm-color\n",
+      "_CE_CONDA=\n",
+      "LESSOPEN=| /usr/bin/lesspipe %s\n",
+      "USER=elkomy\n",
+      "GIT_PAGER=cat\n",
+      "PYTHONIOENCODING=utf-8\n",
+      "CONDA_SHLVL=1\n",
+      "DISPLAY=:0\n",
+      "SHLVL=1\n",
+      "PAGER=cat\n",
+      "VSCODE_CWD=/mnt/c/Users/komy2/AppData/Local/Programs/Microsoft VS Code\n",
+      "MPLBACKEND=module://matplotlib_inline.backend_inline\n",
+      "CONDA_PYTHON_EXE=/home/elkomy/anaconda3/bin/python\n",
+      "XDG_RUNTIME_DIR=/run/user/1000/\n",
+      "CONDA_DEFAULT_ENV=base\n",
+      "WSLENV=VSCODE_WSL_EXT_LOCATION/up\n",
+      "VSCODE_WSL_EXT_LOCATION=/mnt/c/Users/komy2/.vscode/extensions/ms-vscode-remote.remote-wsl-0.88.0\n",
+      "XDG_DATA_DIRS=/usr/local/share:/usr/share:/var/lib/snapd/desktop\n",
+      "PATH=/home/elkomy/anaconda3/envs/cplayground/bin:/home/elkomy/.vscode-server/bin/5c3e652f63e798a5ac2f31ffd0d863669328dc4c/bin/remote-cli:/home/elkomy/anaconda3/bin:/home/elkomy/anaconda3/condabin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/usr/lib/wsl/lib:/mnt/c/Program Files (x86)/Common Files/Oracle/Java/javapath:/mnt/c/GAMS/44:/mnt/c/GAMS/44/gbin:/mnt/c/WINDOWS/system32:/mnt/c/WINDOWS:/mnt/c/WINDOWS/System32/Wbem:/mnt/c/WINDOWS/System32/WindowsPowerShell/v1.0:/mnt/c/WINDOWS/System32/OpenSSH:/mnt/c/Program Files/Java/jdk-1.8/bin:/mnt/c/Program Files/Calibre2:/mnt/c/msys64/mingw64/bin:/mnt/c/ProgramData/chocolatey/bin:/mnt/c/Program Files/PowerShell/7:/mnt/c/Program Files/PowerShell/7-preview/preview:/mnt/c/Program Files/Git/cmd:/mnt/c/Users/komy2/.pyenv/pyenv-win/bin:/mnt/c/Users/komy2/.pyenv/pyenv-win/shims:/mnt/c/Users/komy2/anaconda3:/mnt/c/Users/komy2/anaconda3/Library/mingw-w64/bin:/mnt/c/Users/komy2/anaconda3/Library/usr/bin:/mnt/c/Users/komy2/anaconda3/Library/bin:/mnt/c/Users/komy2/anaconda3/Scripts:/mnt/c/Users/komy2/AppData/Local/Microsoft/WindowsApps:/mnt/c/Users/komy2/AppData/Local/Programs/Microsoft VS Code/bin:/mnt/c/msys64/usr/bin:/snap/bin:/home/elkomy/.vscode-server/bin/5c3e652f63e798a5ac2f31ffd0d863669328dc4c/bin/remote-cli:/home/elkomy/anaconda3/bin:/home/elkomy/anaconda3/condabin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/usr/lib/wsl/lib:/mnt/c/Program Files (x86)/Common Files/Oracle/Java/javapath:/mnt/c/GAMS/44:/mnt/c/GAMS/44/gbin:/mnt/c/WINDOWS/system32:/mnt/c/WINDOWS:/mnt/c/WINDOWS/System32/Wbem:/mnt/c/WINDOWS/System32/WindowsPowerShell/v1.0:/mnt/c/WINDOWS/System32/OpenSSH:/mnt/c/Program Files/Java/jdk-1.8/bin:/mnt/c/Program Files/Calibre2:/mnt/c/msys64/mingw64/bin:/mnt/c/ProgramData/chocolatey/bin:/mnt/c/Program Files/PowerShell/7:/mnt/c/Program Files/PowerShell/7-preview/preview:/mnt/c/Program Files/Git/cmd:/mnt/c/Users/komy2/.pyenv/pyenv-win/bin:/mnt/c/Users/komy2/.pyenv/pyenv-win/shims:/mnt/c/Users/komy2/anaconda3:/mnt/c/Users/komy2/anaconda3/Library/mingw-w64/bin:/mnt/c/Users/komy2/anaconda3/Library/usr/bin:/mnt/c/Users/komy2/anaconda3/Library/bin:/mnt/c/Users/komy2/anaconda3/Scripts:/mnt/c/Users/komy2/AppData/Local/Microsoft/WindowsApps:/mnt/c/Users/komy2/AppData/Local/Programs/Microsoft VS Code/bin:/mnt/c/msys64/usr/bin:/snap/bin\n",
+      "DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus\n",
+      "VSCODE_NLS_CONFIG={\"locale\":\"en\",\"osLocale\":\"en\",\"availableLanguages\":{}}\n",
+      "HOSTTYPE=x86_64\n",
+      "PULSE_SERVER=unix:/mnt/wslg/PulseServer\n",
+      "VSCODE_HANDLES_UNCAUGHT_ERRORS=true\n",
+      "VSCODE_IPC_HOOK_CLI=/run/user/1000/vscode-ipc-fbaec959-bd3d-40a2-af3c-04cb827617f1.sock\n"
+     ]
+    }
+   ],
+   "source": [
+    "!source ./0x03-shell_variables_expansions/4-global_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 20c434d] 0x02-shell_redirections/4-lastlines\n",
+      " 1 file changed, 69 insertions(+), 50 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 1.19 KiB | 1.19 MiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   a70f871..313c5ce  main -> main\n",
+      "   f100cd9..20c434d  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
