--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1026,16 +1026,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 563cd23] 0x02-shell_redirections/5-firstlines\n",
-      " 2 files changed, 64 insertions(+), 54 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/5-firstlines\n"
+      "[main ab56858] 0x03-shell_variables_expansions/5-local_variables\n",
+      " 2 files changed, 128 insertions(+), 47 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/5-local_variables\n"
      ]
     },
     {
@@ -1043,7 +1043,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   313c5ce..563cd23  main -> main\n"
+      "   dd5bf16..ab56858  main -> main\n"
      ]
     }
    ],
@@ -1063,7 +1063,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 6. Line #2 </h4>\n",
+    "<h4> 6. Local variable </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1073,58 +1073,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that displays the third line of the file `iacta` .\n",
-    "\n",
-    "##### The file `iacta` will be in the working directory \n",
-    "* You're not allowed to use 'sed'\n",
-    "\n",
-    "```bash\n",
-    "julien@ubuntu:/tmp/h$ cat iacta \n",
-    "Alea iacta est\n",
-    "\n",
-    "Alea iacta est (\"The die is cast\") is a Latin phrase attributed by Suetonius\n",
-    "(as iacta alea est) to Julius Caesar on January 10, 49 BC\n",
-    "as he led his army across the Rubicon river in Northern Italy. With this step,\n",
-    "he entered Italy at the head of his army in defiance of the Senate and began\n",
-    "his long civil war against Pompey and the Optimates. The phrase has been\n",
-    "adopted in Italian (Il dado è tratto), Romanian (Zarurile au fost aruncate),\n",
-    "Spanish (La suerte está echada), French (Les dés sont jetés), Portuguese (A\n",
-    "sorte está lançada), Dutch (De teerling is geworpen),\n",
-    "German (Der Würfel ist gefallen), Hungarian (A kocka el van vetve) and many other languages to\n",
-    "indicate that events have passed a point of no return.\n",
-    "\n",
-    "Read more: https://en.wikipedia.org/wiki/Alea_iacta_est\n",
-    "julien@ubuntu:/tmp/h$ ./6-third_line \n",
-    "Alea iacta est (\"The die is cast\") is a Latin phrase attributed by Suetonius\n",
-    "julien@ubuntu:/tmp/h$\n",
-    "\n",
-    "```\n",
-    "Note: The output will differ, depending on the content of the file `iacta` .\n",
+    "##### Create a script that creates a new local variable.\n",
+    "* Name: `BEST`\n",
+    "* Value: `School`\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `6-third_line`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `6-create_local_varaible`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/6-third_line\n"
+      "Writing 0x03-shell_variables_expansions/6-create_local_variable\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/6-third_line\n",
+    "%%file 0x03-shell_variables_expansions/6-create_local_variable\n",
     "#!/bin/bash\n",
-    "head -n 3 iacta | tail -n 1 "
+    "BEST=\"School\" "
    ]
   },
   {
@@ -1134,7 +1110,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x  0x02-shell_redirections/6-third_line\n",
+    "chmod u+x  0x03-shell_variables_expansions/6-create_local_variable\n",
     "\n"
    ]
   },
