0x03-shell_variables_expansions/7-create_global_variable

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1116,15 +1116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 34dccbd] 6-third_line\n",
-      " 2 files changed, 10 insertions(+), 10 deletions(-)\n"
+      "[main e8693d9] 0x03-shell_variables_expansions/6-create_local_variable\n",
+      " 2 files changed, 18 insertions(+), 40 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/6-create_local_variable\n"
      ]
     },
     {
@@ -1132,14 +1133,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b2c2939..34dccbd  main -> main\n"
+      "   ab56858..e8693d9  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"6-third_line\"\n",
+    "git commit -m \"0x03-shell_variables_expansions/6-create_local_variable\"\n",
     "git push"
    ]
   },
@@ -1152,7 +1153,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 7.It is a good file that cuts iron without making a noise </h4>\n",
+    "<h4> 7. Global variable </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1162,73 +1163,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a shell script that creates a file named exactly `\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)`  containing the text `Best School` ending by a new line.\n",
+    "##### Create a script that creates a new global variable.\n",
     "\n",
-    "```bash\n",
-    "julien@ubuntu:~/shell$ ls && ./7-file && ls -l && cat -e \\\\*\n",
-    "0-mac_and_cheese 7-file 7-file~ Makefile\n",
-    "total 20\n",
-    "-rwxrw-r-- 1 julien julien 79 Jan 20 06:24 0-mac_and_cheese\n",
-    "-rwxrw-r-- 1 julien julien 90 Jan 20 06:40 7-file\n",
-    "-rwxrw-r-- 1 julien julien 69 Jan 20 06:37 7-file~\n",
-    "-rw-rw-r-- 1 julien julien 14 Jan 20 06:38 Makefile\n",
-    "-rw-rw-r-- 1 julien julien 17 Jan 20 06:40 '\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)'\n",
-    "Best School$\n",
-    "julien@ubuntu:~/shell$ \n",
-    "```\n",
-    "\n",
+    "* Name: BEST\n",
+    "* Value: School\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `7-file`"
+    "* Directory: `0x03-shell_variable_expansions`\n",
+    "* File: `7-create_global_variable`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/7-file\n"
+      "Writing 0x03-shell_variables_expansions/7-create_global_variable\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/7-file\n",
+    "%%file 0x03-shell_variables_expansions/7-create_global_variable\n",
     "#!/bin/bash\n",
-    "echo \"Best School\" > \\\\\\*\\\\\\\\\\'\\\"Best\\ School\\\"\\\\\\'\\\\\\\\\\*\\$\\\\\\?\\\\\\*\\\\\\*\\\\\\*\\\\\\*\\\\\\*\\:\\)"
+    "export BEST=\"School\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\\\\\\*\\\\\\\\\\'\\\"Best\\ School\\\"\\\\\\'\\\\\\\\\\*\\$\\\\\\?\\\\\\*\\\\\\*\\\\\\*\\\\\\*\\\\\\*\\:\\)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/7-file"
+    "chmod u+x 0x03-shell_variables_expansions/7-create_global_variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./0x02-shell_redirections/7-file"
+    "!./0x03-shell_variables_expansions/7-create_global_variable"
    ]
   },
   {
